# rle-tyler-colombia

./: .gitignore  .nojekyll  README.md  _quarto.yml  index.html  index.qmd  pyproject.toml  references.html  references_country_specific.bib  references_iucn.bib  search.json  styles.css
.github/workflows/: deploy.yml
assets/: cog-viewer.mjs
config/: country_config.yaml  country_config.yaml.bogota  country_config.yaml.colombia
content/: 0.1_foreword.html  0.1_foreword.qmd  0.2_preface.html  0.2_preface.qmd  0.3_acknowledgments.html  0.3_acknowledgments.qmd  0.4_coordinating_orgs.html  0.4_coordinating_orgs.qmd  0.5_summary.html  0.5_summary.qmd  1.0_introduction.html  1.0_introduction.qmd  1.1_background.qmd  1.2_overview.qmd  1.3_intro_iucn_rle.qmd  2_ecosystem_overview.html  2_ecosystem_overview.qmd  3_ecosystem_description.qmd
docs/: GCP_SETUP.md
scripts/: 1_update_ecosystem_asset.py  2_build_ecosystems_config.py  3_build_ecosystem_pages.py  _config.py  build_caches.py  build_country_map.py  build_ecosystem_index.py  build_ecosystems.py  check_caches.py  dedupe_widget_assets.py  optimize_source.py  rasterize_ecosystem_to_cog.py  upload_default_country_asset.py
templates/: assessment.qmd  crit_b.qmd
tests/: test_build_caches.py  test_check_caches.py  test_ecosystem_source_guard.py
